--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,44 @@ h1 {
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
 }
+@property --angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+
+@keyframes spin {
+  from {
+    --angle: 0deg;
+  }
+  
+  to {
+    --angle: 360deg;
+  }
+}
+
+.rotate-border::after,
+.rotate-border::before {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: conic-gradient(from var(--angle), transparent 50%, #C2A270);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  padding: 5px;
+  border-radius: 999px;
+  animation: spin 3s linear infinite;
+}
+
+.rotate-border::before {
+  filter: blur(1.5rem);
+  opacity: 0.5;
+}
+
+
 
 
 
